in-memory solution