@@ -1,6 +1,6 @@
 package hu.zsoltn.releasemanager;
 
-import hu.zsoltn.releasemanager.domain.Deployment;
+import hu.zsoltn.releasemanager.dto.DeploymentDto;
 import org.junit.jupiter.api.Test;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.web.client.TestRestTemplate;
@@ -10,8 +10,7 @@ import org.springframework.boot.web.server.LocalServerPort;
 import java.util.Arrays;
 import java.util.List;
 
-import static hu.zsoltn.releasemanager.Constants.DEPLOYMENT_A_1;
-import static hu.zsoltn.releasemanager.Constants.DEPLOYMENT_B_2;
+import static hu.zsoltn.releasemanager.Constants.*;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.springframework.boot.test.context.SpringBootTest.WebEnvironment.DEFINED_PORT;
 
@@ -24,12 +23,24 @@ class ReleaseManagerApplicationTests {
 	private TestRestTemplate restTemplate = new TestRestTemplate();
 
 	@Test
-	void testGetServices() {
-		final String url = "http://localhost:" + port + "/services";
+	void testExample() {
+		final String deployUrl = "http://localhost:" + port + "/deploy";
+		final String deploymentsUrlTemplate = "http://localhost:" + port + "/services?systemVersion=%s";
+		final int systemVersion1 = restTemplate.postForEntity(deployUrl, DEPLOYMENT_DTO_A_1, Integer.class).getBody();
+		final int systemVersion2 = restTemplate.postForEntity(deployUrl, DEPLOYMENT_DTO_B_1, Integer.class).getBody();
+		final int systemVersion3 = restTemplate.postForEntity(deployUrl, DEPLOYMENT_DTO_A_2, Integer.class).getBody();
+		final int systemVersion4 = restTemplate.postForEntity(deployUrl, DEPLOYMENT_DTO_B_1, Integer.class).getBody();
 
-		final List<Deployment> expected = List.of(DEPLOYMENT_A_1, DEPLOYMENT_B_2);
-		final List<Deployment> actual = Arrays.asList(restTemplate.getForObject(url, Deployment[].class));
-		assertEquals(expected, actual);
+		final List<DeploymentDto> deployments1 = Arrays.asList(
+				restTemplate.getForObject(String.format(deploymentsUrlTemplate, 2), DeploymentDto[].class));
+		final List<DeploymentDto> deployments2 = Arrays.asList(
+				restTemplate.getForObject(String.format(deploymentsUrlTemplate, 3), DeploymentDto[].class));
+		assertEquals(1, systemVersion1);
+		assertEquals(2, systemVersion2);
+		assertEquals(3, systemVersion3);
+		assertEquals(3, systemVersion4);
+		assertEquals(List.of(DEPLOYMENT_DTO_A_1, DEPLOYMENT_DTO_B_1), deployments1);
+		assertEquals(List.of(DEPLOYMENT_DTO_A_2, DEPLOYMENT_DTO_B_1), deployments2);
 	}
 
 }
